Updates per review
Updated section where scrolling occurs to add new functionality to make nav bar highlighted when the corresponding section is scrolled to.

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,11 @@ section {
     color: indigo;
 }
 
+.active_listItem {
+    font-size: large;
+    background-color: darkgray;
+}
+
 /* .navbar__menu .menu__link {
     display: block;
     padding: 1em;
